# romyoni-caf-assignment-copy

./: .gitignore  LICENSE  Makefile  README.md  diff_merge_flowchart.mermaid  package-lock.json  project_structure_simple.md  pyproject.toml
.github/workflows/: tests.yml
assignment/: .latexmkrc  asp26-assignment1.tex
caf/: pyproject.toml
caf/caf/: __main__.py  cli.py  cli_commands.py
deployment/: .envrc.default  Dockerfile
docs/: git_tags.md
libcaf/: CMakeLists.txt  pyproject.toml
libcaf/libcaf/: OVERVIEW.md  __init__.py  merge.py  plumbing.py  ref.py  repository.py
libcaf/src/: bind.cpp  blob.h  caf.cpp  caf.h  hash_types.h  object_io.cpp  object_io.h  tree_record.h
tests/: conftest.py
tests/caf/cli_commands/: test_add_branch_command.py  test_branch_command.py  test_branch_exists_command.py  test_commit_command.py  test_create_tag_command.py  test_delete_branch_command.py  test_delete_repo_command.py  test_delete_tag_command.py  test_diff_command.py  test_hash_file_command.py  test_init_command.py  test_log_command.py  test_tags_command.py
tests/libcaf/: test_content.py  test_diff.py  test_hashing.py  test_merge.py  test_object_io.py  test_objects.py  test_ref.py  test_repository.py
